--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teamseq",
+  "name": "webseq",
   "description": "Collaborative music sequencer.",
   "version": "0.0.1",
   "author": "Drew Harris",
